# quipnet

./: .gitignore  Cargo.toml  PLAN.md  README.md  checklist.md  clippy.toml  flake.nix  fozzy.toml
cmd/authority/: Cargo.toml
cmd/authority/src/: main.rs
cmd/bootstrap/: Cargo.toml
cmd/bootstrap/src/: lib.rs  main.rs
cmd/lab/: Cargo.toml
cmd/lab/src/: main.rs
cmd/quicnet/: Cargo.toml
cmd/quicnet/src/: main.rs
cmd/quicnetd/: Cargo.toml
cmd/quicnetd/src/: main.rs
cmd/quip/: Cargo.toml
cmd/quip/src/: main.rs
cmd/quipd/: Cargo.toml
cmd/quipd/src/: main.rs
cmd/relay/: Cargo.toml
cmd/relay/src/: main.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/daemonapi/: Cargo.toml
crates/daemonapi/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/fabric/: Cargo.toml
crates/fabric/src/: lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/membership/: Cargo.toml
crates/membership/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/netcheck/: Cargo.toml
crates/netcheck/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/peerstore/: Cargo.toml
crates/peerstore/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/quic/: Cargo.toml
crates/quic/src/: lib.rs
crates/records/: Cargo.toml
crates/records/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs
crates/relaywire/: Cargo.toml
crates/relaywire/src/: lib.rs
crates/routing/: Cargo.toml
crates/routing/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
deploy/docker/: .dockerignore  Dockerfile  docker-compose.dev.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/nix/: module.nix
deploy/systemd/: quicnetd.service  quipd.service
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: authority-operations.md  authority-reevaluation.md  backup-and-restore.md  cli-surface.md  daemon-api-examples.md  daemon-api-schema.md  daemon-api.md  implementation-map.md  milestones.md  network-foundation.md  operator-deployment.md  operator-workflows.md  path-and-reconnect.md  production-readiness.md  release-checklist.md  runtime-events.md  runtime-lifecycle.md  state-model.md  state-schema-example.md  state-schema.md  storage-layout.md  verification-plan.md
docs/architecture/: overview.md
docs/operations/: release-and-rollback.md
docs/protocol/: canonical-encoding.md
docs/rfcs/: README.md  RFC-0001-identity-network-trust-domains.md  RFC-0002-signed-record-envelope.md  RFC-0003-transport-abstraction.md  RFC-0004-membership-capabilities-revocation.md  RFC-0005-endpoint-discovery-nat-path-state.md  RFC-0006-relay-protocol-and-trust-model.md
docs/security/: threat-model.md
fixtures/: README.md
fixtures/daemon/: authority.show.response.json  identity.show.response.json  identity.verify.response.json  runtime.diagnose.response.json  runtime.events.list.response.json  runtime.health.response.json  runtime.listeners.list.response.json  runtime.paths.list.response.json  runtime.sessions.list.response.json  runtime.status.response.json  session.connect.request.json  session.connect.response.json  state.export.response.json  state.reset.response.json  state.show.response.json  state.validate.response.json
fixtures/events/: authority.reevaluation_completed.json  path.migration_completed.json  reconnect.cleared.json  reconnect.failed.json  reconnect.retry_scheduled.json  reconnect.unsuppressed.json  session.state_changed.json
fixtures/state/: invalid-runtime-field.json  invalid-schema-version.json
proto/: README.md
release/: manifest.toml
schemas/: README.md
schemas/daemon/: authority.show.response.schema.json  common.schema.json  identity.show.response.schema.json  identity.verify.response.schema.json  runtime.diagnose.response.schema.json  runtime.events.list.response.schema.json  runtime.health.response.schema.json  runtime.listeners.list.response.schema.json  runtime.paths.list.response.schema.json  runtime.sessions.list.response.schema.json  runtime.status.response.schema.json  session.close.request.schema.json  session.close.response.schema.json  session.connect.request.schema.json  session.connect.response.schema.json  state.export.request.schema.json  state.export.response.schema.json  state.reset.request.schema.json  state.reset.response.schema.json  state.show.response.schema.json  state.validate.response.schema.json
schemas/events/: runtime-event.schema.json
schemas/state/: state.example.json  state.schema.json
scripts/release/: build-repro.sh  generate-sbom.sh  sign-artifacts.sh  verify-release.sh
tests/chaos/scenarios/: relay-failover.toml
tests/fozzy/src/: main.fzy
tests/fuzz/: manifest.toml
tests/integration/scenarios/: authority-reevaluation-smoke.fozzy.json  backup-restore-smoke.fozzy.json  local-smoke.fozzy.json  reconnect-smoke.fozzy.json  relay-migration-smoke.fozzy.json  restart-smoke.fozzy.json  runtime-diagnosis-smoke.fozzy.json  state-recovery-smoke.fozzy.json
tests/performance/scenarios/: relay-throughput.toml
tests/simulation/scenarios/: three-region-baseline.toml
verification/fozzy/: README.md  authority-reevaluation.trace.fozzy  backup-restore-smoke.trace.fozzy  local-smoke.trace.fozzy  reconnect-smoke.trace.fozzy  relay-migration-smoke.trace.fozzy  release-gate.json  restart-smoke.trace.fozzy  run-release-gate.sh  runtime-diagnosis.trace.fozzy  scenarios.json  traces.json
