[workspace]
members = [
    "crates/model",
    "crates/crypto",
    "crates/identity",
    "crates/membership",
    "crates/records",
    "crates/peerstore",
    "crates/discovery",
    "crates/netcheck",
    "crates/routing",
    "crates/transport",
    "crates/quic",
    "crates/relaywire",
    "crates/relay",
    "crates/protocol",
    "crates/policy",
    "crates/scheduler",
    "crates/observability",
    "crates/control",
    "crates/daemonapi",
    "crates/fabric",
    "crates/ffi",
    "crates/testkit",
    "cmd/quipd",
    "cmd/quip",
    "cmd/relay",
    "cmd/bootstrap",
    "cmd/authority",
    "cmd/lab",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81"
version = "0.1.0"
authors = ["Quip Contributors"]
repository = "https://github.com/saint0x/quipnet"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = { version = "1.10.1", features = ["serde"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.50", features = ["derive"] }
data-encoding = "2.9.0"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core", "serde"] }
hex = "0.4.3"
hkdf = "0.12.4"
multihash-codetable = { version = "0.1.4", features = ["blake3", "sha2"] }
rand = "0.8.5"
rand_core = "0.6.4"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
unsigned-varint = "0.8.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.2", features = ["derive"] }
