[package]
name = "lab"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
observability = { path = "../../crates/observability" }
fabric = { path = "../../crates/fabric" }
serde.workspace = true
serde_json.workspace = true
