[package]
name = "quicnetd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
crypto = { path = "../../crates/crypto" }
identity = { path = "../../crates/identity" }
observability = { path = "../../crates/observability" }
fabric = { path = "../../crates/fabric" }
quic = { path = "../../crates/quic" }
tokio.workspace = true
