[package]
name = "quip"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
crypto = { path = "../../crates/crypto" }
identity = { path = "../../crates/identity" }
observability = { path = "../../crates/observability" }
fabric = { path = "../../crates/fabric" }
membership = { path = "../../crates/membership" }
quic = { path = "../../crates/quic" }
rand.workspace = true
tokio.workspace = true
