[package]
name = "relayd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
observability = { path = "../../crates/observability" }
crypto = { path = "../../crates/crypto" }
model = { path = "../../crates/model" }
relay = { path = "../../crates/relay" }
relaywire = { path = "../../crates/relaywire" }
serde_json.workspace = true
tiny_http = "0.12.0"

[[bin]]
name = "relay"
path = "src/main.rs"
