[package]
name = "control"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.81"
authors = ["Quipnet Contributors"]
repository = "https://github.com/saint0x/quipnet"

[dependencies]
crypto = { path = "../crypto" }
membership = { path = "../membership" }
records = { path = "../records" }
model = { path = "../model" }
relaywire = { path = "../relaywire" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ureq = { version = "2.10.1", features = ["json"] }
