[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
model = { path = "../model" }
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
