[package]
name = "fabric"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
rand.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
observability = { path = "../observability" }
discovery = { path = "../discovery" }
netcheck = { path = "../netcheck" }
routing = { path = "../routing" }
policy = { path = "../policy" }
peerstore = { path = "../peerstore" }
protocol = { path = "../protocol" }
records = { path = "../records" }
scheduler = { path = "../scheduler" }
transport = { path = "../transport" }
model = { path = "../model" }
control = { path = "../control" }
membership = { path = "../membership" }
crypto = { path = "../crypto" }
relaywire = { path = "../relaywire" }
zeroize.workspace = true

[dev-dependencies]
membership = { path = "../membership" }
quic = { path = "../quic" }
relay = { path = "../relay" }
tokio.workspace = true
