[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
crypto = { path = "../crypto" }
model = { path = "../model" }
rand.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true

