[package]
name = "membership"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crypto = { path = "../crypto" }
model = { path = "../model" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
