[package]
name = "observability"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
model = { path = "../model" }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

