[package]
name = "policy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
membership = { path = "../membership" }
model = { path = "../model" }
serde.workspace = true
thiserror.workspace = true

