[package]
name = "relaywire"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crypto = { path = "../crypto" }
identity = { path = "../identity" }
model = { path = "../model" }
serde.workspace = true
serde_json.workspace = true
